--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: abhigex@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   We who drive the time machine
 baseurl: "/WWDTTM" # the subpath of your site, e.g. /blog
-url: "https://viggi-v.github.io/WWDTTM" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://viggi-v.github.io/WWDTM" # the base hostname & protocol for your site, e.g. http://example.com
 icon: /assets/images/icon-512.png
 twitter_username: patdryburgh
 github_username:  patdryburgh
